# snakesim

./: .gitattributes  .gitignore  LICENSE  README.md  README.old.md  main.py  planar_arm.py  requirements.txt  trajectory_analysis.ipynb
blender/: linspector.blend
latex/: Identificacao.tex  easysparc.cls  main.tex
latex/Cap00/: Dedicatoria.tex  Epigrafe.tex  Resumo.tex  Simbolos.tex
latex/Cap01/: Capitulo1.tex
latex/Cap02/: Capitulo2.tex
latex/Cap03/: Capitulo3.tex
latex/Cap04/: Capitulo4.tex
latex/Cap05/: Capitulo5.tex
latex/Ref/: SampleReferences.bib
ros2_ws/: Makefile
ros2_ws/src/parmsim/: package.xml  setup.cfg  setup.py
ros2_ws/src/parmsim/parmsim/: animate.py  parmsim_animate.py  parmsim_node.py
ros2_ws/src/snakesim/: CMakeLists.txt  package.xml
ros2_ws/src/snakesim/src/: Link.cpp  Link.hpp  SnakeSim.cpp  SnakeSim.hpp  snakesim_node.cpp  subscriber.cpp
ros2_ws/src/snakesim_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/snakesim_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/yamor_control/: package.xml  setup.cfg  setup.py
snakesim/: package.xml  setup.cfg  setup.py
snakesim/launch/: experiment_launch.py  snake_launch.py
snakesim/protos/: Snake5R.proto
snakesim/protos/meshes/: lx16a_servo.dae  lx16a_servo_socket.dae  lx16a_socket.dae  servo.stl  servoSocket.stl  socket.stl
snakesim/resource/: snake.urdf  snake_robot.urdf  snake_robot.xacro
snakesim/snakesim/: experiment.py  plot_results.py  resolved_rate_controller.py  robot.py  robot_controller.py  snake_driver.py  trajectory_action_client.py  trajectory_action_server.py
snakesim/worlds/: .snake.wbproj  .world.wbproj  snake.wbt
snakesim_interfaces/: CMakeLists.txt  package.xml
snakesim_interfaces/action/: MoveTo.action  TrajectoryRRC.action
snakesim_interfaces/msg/: InputRRC.msg  OutputRRC.msg
snakesim_interfaces/srv/: JointState.srv  SetJointState.srv
src/: animate.py  denso_vp6242.py  easysparc.cls  grad.ipynb  main.py  main.tex  rrc.py  trajectory.py
src/Cap00/: Abreviaturas.tex  Abstract.tex  Agradecimentos.tex
src/Cap05/: Capitulo5.tex
src/notebooks/: trajectory.ipynb
tex/: main.tex
tex/Cap00/: Agradecimentos.tex
tex/Cap01/: Capitulo1.tex
tex/Cap02/: Capitulo2.tex
tex/Cap04/: Capitulo4.tex
webots/controllers/denso_controller/: denso.py  denso_controller.py
webots/protos/: DensoVP6242 copy.proto  DensoVP6242.proto
webots/worlds/: .denso_vp6242.wbproj  denso_vp6242.wbt
(+45 files in other folders)
